# museum-attendance

./: .env.example  .gitignore  README.md  docker-compose.local.yml  docker-compose.yml
docs/components/: museum-attendance-data-fetcher.drawio
docs/database-diagram/: database-diagram.drawio
docs/system-architecture/: system-architecture.drawio
museum-attendance-common/: .coverage  README.md  pyproject.toml
museum-attendance-common/src/museum_attendance_common/: __init__.py
museum-attendance-common/src/museum_attendance_common/config/: __init__.py  database.py  settings.py
museum-attendance-common/src/museum_attendance_common/enumeration/: __init__.py  import_status.py
museum-attendance-common/src/museum_attendance_common/exceptions/: __init__.py  museum_data_fetcher_error.py
museum-attendance-common/src/museum_attendance_common/model/: __init__.py  city.py  country.py  import_log.py  museum.py  museum_attributes.py
museum-attendance-common/src/museum_attendance_common/repository/: city_repository.py  country_repository.py  import_log_repository.py  museum_attributes_repository.py  museum_repository.py
museum-attendance-common/src/museum_attendance_common/utils/: __init__.py  logging.py
museum-attendance-common/tests/test_config/: __init__.py  test_database.py  test_settings.py
museum-attendance-common/tests/test_enumeration/: __init__.py  test_import_status.py
museum-attendance-common/tests/test_exceptions/: __init__.py  test_exceptions.py
museum-attendance-common/tests/test_model/: __init__.py  test_city.py  test_country.py  test_import_log.py  test_museum.py  test_museum_attributes.py
museum-attendance-common/tests/test_repository/: __init__.py  test_city_repository.py  test_country_repository.py  test_import_log_repository.py  test_museum_attributes_repository.py  test_museum_repository.py
museum-attendance-common/tests/test_utils/: __init__.py  test_logging.py
museum-attendance-data-fetcher/: .coverage  .env.example  Dockerfile  pyproject.toml
museum-attendance-data-fetcher/assets/: 21st_Century_Museum_of_Contemporary_Art,_Kanazawa.html  Acropolis_Museum.html  American_Museum_of_Natural_History.html  Amsterdam.html  Art_Gallery_of_NSW.html  Athens.html  Beijing.html  Bilbao.html  British_Museum.html  California_Science_Center.html  Centre_Pompidou.html  Centro_Cultural_Banco_do_Brasil.html  China_National_Silk_Museum.html  China_Science_and_Technology_Museum.html  Chinese_Aviation_Museum.html  Edinburgh.html  Florence.html  Fujian_Museum.html  Fuzhou.html  Galleria_degli_Uffizi.html  Galleria_dell'Accademia.html  Guggenheim_Museum_Bilbao.html  Hangzhou.html  Hangzhou_Arts_and_Crafts_Museum.html  Hong_Kong.html  Hubei_Provincial_Museum.html  Kanazawa.html  Kaohsiung.html  Kaohsiung_Museum_of_Fine_Arts.html  Konya.html  Kraków.html  Kunsthistorisches_Museum.html  List_of_most_visited_museums.html  London.html  London_Science_Museum.html  Los_Angeles.html  Louis_Vuitton_Foundation.html  Louvre.html  M+.html  Madrid.html  (+61 more)
museum-attendance-data-fetcher/src/: museum_attendance_data_fetcher.py
museum-attendance-data-fetcher/src/config/: __init__.py  database.py  settings.py
museum-attendance-data-fetcher/src/dto/: __init__.py  city.py  most_visited_museum_list.py  museum.py
museum-attendance-data-fetcher/src/enumeration/: __init__.py  global_enum.py  museum_table_headers.py
museum-attendance-data-fetcher/src/exceptions/: __init__.py  api_error.py  configuration_error.py  data_processing_error.py  database_error.py
museum-attendance-data-fetcher/src/model/: city.py  country.py  museum.py  museum_attributes.py
museum-attendance-data-fetcher/src/repository/: __init__.py  city_repository.py  country_repository.py  import_log_repository.py  museum_attributes_repository.py  museum_repository.py
museum-attendance-data-fetcher/src/service/: __init__.py  data_collection_service.py  persistence_service.py
museum-attendance-data-fetcher/src/service/api/: __init__.py  wikipedia_service.py
museum-attendance-data-fetcher/src/service/extractor/: __init__.py  abstract_wikipedia_page_extractor.py  city_page_extractor.py  museum_instance_page_extractor.py  museum_list_page_extractor.py
museum-attendance-data-fetcher/tests/: conftest.py
museum-attendance-data-fetcher/tests/test_dto/: test_city.py  test_most_visited_museum_list.py  test_museum.py
museum-attendance-data-fetcher/tests/test_enumeration/: test_global_enum.py  test_museum_table_header.py
museum-attendance-data-fetcher/tests/test_exceptions/: test_exceptions.py
museum-attendance-data-fetcher/tests/test_service/: test_data_collection_service.py  test_persistence_service.py
museum-attendance-data-fetcher/tests/test_service/test_api/: test_wikipedia_service.py
museum-attendance-data-fetcher/tests/test_service/test_extractor/: test_extractors.py
museum-attendance-jupyter/: Dockerfile  README.md  pyproject.toml
museum-attendance-jupyter/notebooks/: museum_regression.ipynb
sql/: V0_1__initialize_schema.sql
